20240604-012031：对比更新到1342.

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -13754,9 +13754,9 @@ bilibili	blbl
 寸有所长	cysc
 尺有所短，寸有所长	cysc
 尺有所短	cysd
-错事	cysf
 此事	cysf
-此世	cysf
+错事	cysf
+铲屎官	cysg
 常言说得好	cysh
 穿越时空	cysk
 此说	cysl
@@ -19134,8 +19134,8 @@ bilibili	blbl
 当头一棒	dtyb
 第一	dtyd
 等一等	dtyd
-短于	dtyg
 等于	dtyg
+短于	dtyg
 答应	dtyh
 敌意	dtyh
 短语	dtyl
@@ -26929,9 +26929,8 @@ bilibili	blbl
 功力	gfln
 攻略	gflo
 过滤器	gflq
-过路人	gflr
-过来人	gflr
 过量	gflr
+过来人	gflr
 古龙水	gfls
 功利	gflt
 过两天	gflt
@@ -29030,8 +29029,8 @@ bilibili	blbl
 关西	gmxf
 公休	gmxj
 刮目相看	gmxk
-公信力	gmxl
 关心	gmxl
+公信力	gmxl
 公学	gmxn
 鬼迷心窍	gmxq
 公休日	gmxr
@@ -30571,8 +30570,8 @@ GPRS	gprs
 膈	gvdi
 隔代	gvdj
 孤单	gvdm
-孤灯	gvdm
 隔断	gvdm
+孤灯	gvdm
 肝胆脾	gvdp
 隔段	gvdr
 股东	gvds
@@ -30631,9 +30630,9 @@ GPRS	gprs
 隔离带	gvld
 孤老	gvlf
 孤立	gvlh
+隔离	gvlh
 孤零	gvlh
 肛瘘	gvlh
-隔离	gvlh
 孤零零	gvll
 隔离区	gvlq
 股利	gvlt
@@ -30684,9 +30683,9 @@ GPRS	gprs
 股息	gvxr
 孤雁	gvya
 隔夜茶	gvyc
-肝硬化	gvyh
-隔夜	gvyh
 隔音	gvyh
+隔夜	gvyh
+肝硬化	gvyh
 隔盐灸	gvyj
 肝炎	gvym
 肝胰	gvyv
@@ -30731,10 +30730,9 @@ GPRS	gprs
 各店	gwdh
 够得着	gwdi
 勾当	gwdj
-勾掉	gwdk
 勾搭	gwdk
+勾掉	gwdk
 勾兑	gwdm
-各的	gwdr
 够得上	gwds
 各地	gwdu
 各队	gwdv
@@ -30769,7 +30767,6 @@ GPRS	gprs
 各	gwi
 狗仔队	gwid
 各族	gwih
-各站	gwih
 句	gwii
 勾住	gwij
 各执	gwik
@@ -30791,7 +30788,6 @@ GPRS	gprs
 够劲	gwjl
 高屋建瓴	gwjl
 各家	gwjn
-各具	gwjo
 各界	gwjo
 龟鉴	gwju
 觥	gwjw
@@ -30909,7 +30905,6 @@ GPRS	gprs
 各项	gwxf
 各型	gwxg
 狗熊	gwxl
-各显	gwxr
 狗血	gwxr
 勾选	gwxt
 各系	gwxw
@@ -30932,7 +30927,6 @@ GPRS	gprs
 姑妄言之	gwyz
 狗仔队	gwzd
 各族	gwzh
-各站	gwzh
 勾住	gwzj
 各执	gwzk
 各州	gwzm
@@ -31169,8 +31163,8 @@ GPRS	gprs
 钢筋	gyjt
 钢锯	gyjy
 钢架	gyjz
-钢盔	gyka
 锅盔	gyka
+钢盔	gyka
 狗眼看人低	gykd
 狗眼看人	gykr
 各有利弊	gylb
@@ -31437,8 +31431,8 @@ GPRS	gprs
 还款	haku
 还林	halc
 灰冷	halh
-厚礼	hall
 灰溜溜	hall
+厚礼	hall
 翃	hall
 还礼	hall
 厚利	halt
@@ -31774,9 +31768,9 @@ GPRS	gprs
 核孔	hckv
 横列	hcla
 核裂变	hclb
-核垄断	hcld
-横梁	hcld
 横流	hcld
+横梁	hcld
+核垄断	hcld
 好吃懒做	hcli
 酣畅淋漓	hcll
 核力	hcln
@@ -31878,8 +31872,8 @@ GPRS	gprs
 海	hd
 画	hd
 淮安	hdan
-河岸	hdao
 海岸	hdao
+河岸	hdao
 海岸线	hdax
 画布	hdba
 汉堡包	hdbb
@@ -31904,27 +31898,26 @@ GPRS	gprs
 海贝	hdbo
 换挡拨片	hdbp
 活版	hdbr
-河北省	hdbs
 湖北省	hdbs
+河北省	hdbs
 画笔	hdbt
 河坝	hdbu
 画饼	hdbw
 汇编	hdbx
-汉白玉	hdby
+湖北	hdby
 河北	hdby
 淮北	hdby
-湖北	hdby
+汉白玉	hdby
 活靶子	hdbz
 海边	hdbz
 虎毒不食子	hdbz
-汇成	hdca
 混成	hdca
 海潮	hdcd
 海菜	hdce
 汉朝	hdcf
 获得成功	hdcg
-河床	hdch
 海产	hdch
+河床	hdch
 海床	hdch
 海词库	hdck
 海船	hdcq
@@ -31939,8 +31932,8 @@ GPRS	gprs
 横刀夺爱	hdda
 河对岸	hdda
 浩大	hdda
-涵洞	hddd
 混沌	hddd
+涵洞	hddd
 豁达大度	hddd
 浩荡	hdde
 海带	hddf
@@ -31992,8 +31985,8 @@ GPRS	gprs
 潢	hdfo
 画舫	hdfq
 浩繁	hdft
-海防	hdfv
 湖	hdfv
+海防	hdfv
 混饭	hdfw
 鸿	hdfw
 混纺	hdfx
@@ -32023,10 +32016,8 @@ GPRS	gprs
 浑厚	hdha
 汉化版	hdhb
 沪杭	hdhc
-浑河	hdhd
 浩瀚	hdhd
 海涵	hdhd
-淮河	hdhd
 混混	hdhd
 洪荒	hdhe
 濠	hdhi
@@ -32083,16 +32074,14 @@ GPRS	gprs
 海警	hdje
 汇聚	hdjf
 活见鬼	hdjg
-海基会	hdjh
-海迹湖	hdjh
-淮	hdjh
 混迹	hdjh
+淮	hdjh
 画夹	hdjh
+海基会	hdjh
 浛	hdji
 汇集	hdjj
 汗津津	hdjj
 海军	hdjl
-混交林	hdjl
 滑稽脸	hdjl
 画卷	hdjm
 画家	hdjn
@@ -32130,8 +32119,8 @@ GPRS	gprs
 海得拉巴	hdlb
 海林	hdlc
 河流	hdld
-洪涝	hdld
 海浪	hdld
+洪涝	hdld
 沪	hdle
 海拉尔	hdle
 华东理工	hdlg
@@ -32184,7 +32173,6 @@ GPRS	gprs
 海米	hdmm
 汉姆	hdms
 汗毛	hdmt
-河漫滩	hdmt
 海绵体	hdmt
 鸿毛	hdmt
 活埋	hdmu
@@ -32199,9 +32187,9 @@ GPRS	gprs
 汉尼拔	hdnb
 海南岛	hdnd
 河南	hdnf
+湖南	hdnf
 海南	hdnf
 淮南	hdnf
-湖南	hdnf
 浣	hdng
 沪宁杭	hdnh
 淮南子	hdni
@@ -32301,8 +32289,8 @@ GPRS	gprs
 海	hdt
 河套	hdta
 滑梯	hdtc
-海涛	hdtd
 海滩	hdtd
+海涛	hdtd
 海苔	hdte
 海天	hdtg
 获得通过	hdtg
@@ -32317,8 +32305,8 @@ GPRS	gprs
 浑天说	hdts
 活脱脱	hdtt
 画坛	hdtu
-河豚	hdtv
 海豚	hdtv
+河豚	hdtv
 海	hdtx
 活棋	hduc
 河渠	hdud
@@ -32332,9 +32320,8 @@ GPRS	gprs
 鸿	hdw
 海碗	hdwa
 海外版	hdwb
-汉武帝	hdwd
-河湾	hdwd
 海湾	hdwd
+汉武帝	hdwd
 汉王	hdwg
 浲	hdwg
 汉文	hdwh
@@ -32343,7 +32330,6 @@ GPRS	gprs
 淴	hdwl
 画地为牢	hdwl
 混为	hdwm
-河网	hdwo
 涣	hdwo
 活物	hdwt
 核对无误	hdww
@@ -32546,8 +32532,8 @@ GPRS	gprs
 花茎	heje
 获救	hejf
 荟	hejg
-荒郊	hejh
 获奖	hejh
+荒郊	hejh
 萑	hejh
 花架子	heji
 获奖者	heji
@@ -32570,9 +32556,8 @@ GPRS	gprs
 荤	hel
 花柳	helc
 葫芦岛	held
-花落	hele
-花蕾	hele
 葫芦	hele
+花蕾	hele
 荒凉	helh
 荷兰猪	heli
 花翎	helj
@@ -32652,8 +32637,8 @@ GPRS	gprs
 荷塘	hetu
 劐	heu
 花枪	heuc
-花期	heuf
 获取	heuf
+花期	heuf
 荒弃	heuh
 花俏	heuj
 花前	heum
@@ -32748,9 +32733,9 @@ GPRS	gprs
 黄毒	hfdg
 黄帝	hfdh
 黄帝陵	hfdl
-巷道	hfdm
-邯郸	hfdm
 黄道	hfdm
+邯郸	hfdm
+巷道	hfdm
 酣斗	hfdn
 哈佛大学	hfdx
 酣	hff
@@ -32773,13 +32758,11 @@ GPRS	gprs
 黄瓜	hfgq
 黄果树	hfgs
 黄花菜	hfhc
-胡混	hfhd
 黄河	hfhd
 黄花	hfhe
 黄花岗	hfhg
 黄淮海	hfhh
 胡话	hfhl
-黄昏恋	hfhl
 黄鹤楼	hfhl
 黄黑	hfho
 黄褐色	hfhs
@@ -32828,9 +32811,9 @@ GPRS	gprs
 胡萝卜	hflb
 翰林	hflc
 胡兰成	hflc
-惠灵顿	hfld
-黄粱	hfld
 黄鹂	hfld
+黄粱	hfld
+惠灵顿	hfld
 黄莲	hfle
 黄老	hflf
 胡来	hflh
@@ -33420,10 +33403,10 @@ GPRS	gprs
 哼	hih
 嚎	hiha
 哈韩	hihf
-呵呵	hihi
 呼唤	hihi
-哈哈	hihi
+呵呵	hihi
 嘿嘿	hihi
+哈哈	hihi
 哈哈镜	hihj
 嚯	hihj
 呵护	hihk
@@ -33445,8 +33428,8 @@ GPRS	gprs
 花枝招展	hiii
 喊住	hiij
 号召力	hiil
-哼着	hiim
 喊着	hiim
+哼着	hiim
 号召	hiin
 很早之前	hiiq
 吓走	hiiu
@@ -33461,10 +33444,9 @@ GPRS	gprs
 呼机	hijc
 喝酒	hijd
 呼救	hijf
-号叫	hiji
-吼叫	hiji
 呼叫	hiji
 喊叫	hiji
+号叫	hiji
 嚎叫	hiji
 喊价	hijj
 呼之即来	hijl
@@ -33484,11 +33466,10 @@ GPRS	gprs
 花枝乱颤	hilc
 哈里发	hilf
 合纵连横	hilh
+喉咙	hili
 呼噜	hili
 哈啰	hili
 哈喇子	hili
-哗啦	hili
-喉咙	hili
 号令	hilj
 呼啦啦	hill
 哗啦啦	hill
@@ -33549,9 +33530,9 @@ GPRS	gprs
 喊杀	hism
 号	hiss
 喉舌	hist
-吼声	hisu
-呼声	hisu
 喊声	hisu
+呼声	hisu
+吼声	hisu
 华中师范大学	hisx
 吽	hit
 吓退	hitb
@@ -33624,8 +33605,8 @@ GPRS	gprs
 喝足	hizi
 喊住	hizj
 号召力	hizl
-哼着	hizm
 喊着	hizm
+哼着	hizm
 号召	hizn
 吓走	hizu
 号子	hizv
@@ -33687,9 +33668,9 @@ GPRS	gprs
 候车	hjcs
 候车室	hjcs
 货车	hjcs
+合称	hjct
 何愁	hjct
 合唱团	hjct
-合称	hjct
 会场	hjcu
 何出	hjcv
 何处	hjcw
@@ -33700,9 +33681,8 @@ GPRS	gprs
 货店	hjdh
 会党	hjdj
 会打	hjdk
-华诞	hjdl
-合得来	hjdl
 合订	hjdl
+华诞	hjdl
 华灯	hjdm
 化蝶	hjdo
 华东	hjds
@@ -33739,8 +33719,8 @@ GPRS	gprs
 华发	hjfz
 会	hjg
 化工部	hjgb
-化工厂	hjgc
 合格	hjgc
+化工厂	hjgc
 货柜	hjgc
 化工	hjgf
 何干	hjgg
@@ -33761,16 +33741,15 @@ GPRS	gprs
 合欢花	hjhh
 好借好还	hjhh
 货号	hjhi
-化合	hjhj
-化合价	hjhj
 合伙	hjhj
+化合	hjhj
 阂	hjhj
 会徽	hjhk
 花见花开	hjhk
 阂	hjhk
 会话	hjhl
-合家欢乐	hjhl
 合欢	hjhl
+合家欢乐	hjhl
 阖家欢乐	hjhl
 辉煌	hjhm
 合乎	hjhm
@@ -33963,15 +33942,13 @@ GPRS	gprs
 合同工	hjtg
 化痰	hjth
 佸	hjti
-合体字	hjti
 合同制	hjti
-会堂	hjtj
-华佗	hjtj
 合体	hjtj
+华佗	hjtj
+会堂	hjtj
 货摊	hjtk
 龢	hjtk
 会谈	hjtl
-何谈	hjtl
 含糖	hjtm
 合同	hjto
 伙同	hjto
@@ -34011,8 +33988,8 @@ GPRS	gprs
 会晤	hjwr
 后继无人	hjwr
 阍	hjwr
-何物	hjwt
 货物	hjwt
+何物	hjwt
 化外	hjww
 怀瑾握瑜	hjwy
 华夏	hjxa
@@ -34072,8 +34049,8 @@ GPRS	gprs
 会阴	hjyv
 何用	hjyw
 荒郊野外	hjyw
-化缘	hjyx
 化验	hjyx
+化缘	hjyx
 化验员	hjyy
 货运站	hjyz
 何在	hjza
@@ -34163,8 +34140,8 @@ GPRS	gprs
 护法	hkfd
 换房	hkfl
 很烦	hkfm
-护发	hkfn
 挥发	hkfn
+护发	hkfn
 护肤品	hkfp
 汇款方式	hkfs
 护符	hkft
@@ -34193,17 +34170,15 @@ GPRS	gprs
 攉	hkh
 很厚	hkha
 挥汗	hkhd
-挥霍掉	hkhd
 换汇	hkhd
 护花	hkhe
 挥霍	hkhh
 行号	hkhi
-护航舰	hkhj
 换货	hkhj
 攉	hkhj
 换行	hkhk
-花开花落	hkhl
 行话	hkhl
+花开花落	hkhl
 很火	hkhm
 换回	hkho
 护航	hkhq
@@ -34477,10 +34452,10 @@ GPRS	gprs
 翯	hlh
 合理合法	hlhf
 互利互惠	hlhh
-慌里慌张	hlhi
 欢呼	hlhi
-翯	hlhi
 诨号	hlhi
+翯	hlhi
+慌里慌张	hlhi
 谎话	hlhl
 祸害	hlhn
 祸患	hlho
@@ -34600,11 +34575,10 @@ GPRS	gprs
 话匣子	hlxz
 罕有	hlya
 欢迎词	hlyc
-欢迎会	hlyh
+谎言	hlyh
+话音	hlyh
 讳言	hlyh
 话里有话	hlyh
-话音	hlyh
-谎言	hlyh
 话语	hlyl
 黄粱一梦	hlym
 欢愉	hlyn
@@ -34681,8 +34655,6 @@ GPRS	gprs
 火花	hmhe
 㸌	hmhj
 火候	hmhj
-乎乎	hmhm
-烘烘	hmhm
 糊糊	hmhm
 火花塞	hmhs
 火狐	hmhw
@@ -34720,8 +34692,8 @@ GPRS	gprs
 火急	hmjw
 糊口	hmki
 火控	hmkk
-火炕	hmkm
 烘烤	hmkm
+火炕	hmkm
 火坑	hmku
 火龙	hmla
 横眉冷对	hmld
@@ -34918,16 +34890,14 @@ GPRS	gprs
 恢弘	hnhb
 恒河	hnhd
 怀化	hnhj
-寒号鸟	hnhn
-怀恨	hnhn
+悔恨	hnhn
 恍惚	hnhn
 恢宏	hnhn
-悔恨	hnhn
+寒号鸟	hnhn
 惶惑	hnhs
 恍忽	hnhw
 何年何月	hnhy
 慌张	hnib
-华南准静止锋	hnif
 寒颤	hnih
 患难之交	hnij
 寒证	hnil
@@ -34953,11 +34923,9 @@ GPRS	gprs
 贺龙	hnla
 寒流	hnld
 寒冷	hnlh
-寒凉	hnlh
 寒露	hnlh
-怀恋	hnlh
-火奴鲁鲁	hnll
 贺礼	hnll
+火奴鲁鲁	hnll
 贺兰	hnlm
 恒力	hnln
 红男绿女	hnln
@@ -35145,19 +35113,17 @@ GPRS	gprs
 患处	hocw
 回档	hodc
 黑洞	hodd
-黑洞洞	hodd
 黑豆	hodd
 回荡	hode
 黑带	hodf
-蝴蝶花	hodh
 黑店	hodh
+蝴蝶花	hodh
 回跌	hodi
 蝴蝶结	hodj
 蝴蝶兰	hodl
 黑道	hodm
 蝴蝶	hodo
 峘	hodr
-黑的	hodr
 回到	hods
 回答	hodt
 回队	hodv
@@ -35244,9 +35210,9 @@ GPRS	gprs
 回扣	hokk
 黑客	hokn
 虹口区	hokq
+贿款	hoku
 回款	hoku
 虹口区	hoku
-贿款	hoku
 回馈	hokw
 患	hol
 回历	hola
@@ -35262,8 +35228,8 @@ GPRS	gprs
 翙	holl
 黑溜溜	holl
 回炉	holm
-囫囵	holo
 贿赂	holo
+囫囵	holo
 回笼	holt
 黑脸	holv
 黑	hom
@@ -35274,8 +35240,8 @@ GPRS	gprs
 黑麦	homg
 回门	homj
 黑米	homm
-回眸	homo
 蛤蟆	homo
+回眸	homo
 回马枪	homq
 回马枪	homu
 虹膜	homv
@@ -35540,14 +35506,14 @@ GPRS	gprs
 后	hqi
 后在	hqia
 航展	hqib
-后罩房	hqif
 后者	hqif
-后主	hqih
+后罩房	hqif
 后座	hqih
+后主	hqih
 豪情壮志	hqii
 后传	hqij
-后坐力	hqil
 航站楼	hqil
+后坐力	hqil
 害群之马	hqim
 后置	hqio
 回去之前	hqiq
@@ -35567,9 +35533,6 @@ GPRS	gprs
 后记	hqjl
 后加	hqjn
 后脚	hqjv
-划清界线	hqjx
-划清界限	hqjx
-后经	hqjx
 后继	hqjx
 后金	hqjy
 后加	hqjz
@@ -35585,9 +35548,9 @@ GPRS	gprs
 后楼	hqlc
 后梁	hqld
 后来	hqlh
-后来者	hqli
-后路	hqli
 航路	hqli
+后路	hqli
+后来者	hqli
 后拉	hqlk
 后两年	hqln
 后来人	hqlr
@@ -35698,13 +35661,13 @@ GPRS	gprs
 后遗症	hqyz
 后在	hqza
 航展	hqzb
-后罩房	hqzf
 后者	hqzf
-后主	hqzh
+后罩房	hqzf
 后座	hqzh
+后主	hqzh
 后传	hqzj
-后坐力	hqzl
 航站楼	hqzl
+后坐力	hqzl
 害群之马	hqzm
 后置	hqzo
 回去之前	hqzq
@@ -37800,9 +37763,8 @@ GPRS	gprs
 再比如说	ibrs
 针砭时弊	ibsb
 张三丰	ibsf
-作壁上观	ibsg
 展示	ibsg
-展示馆	ibsg
+作壁上观	ibsg
 展商	ibsh
 展示会	ibsh
 支部书记	ibsj
@@ -43271,8 +43233,8 @@ GPRS	gprs
 自强	irub
 自洽	irud
 阵容强大	irud
-早期	iruf
 追求	iruf
+早期	iruf
 自弃	iruh
 最全	iruj
 自谦	irul
@@ -47553,9 +47515,9 @@ GPRS	gprs
 聚聚	jfjf
 截击	jfjg
 基金会	jfjh
+聚集	jfjj
 救济金	jfjj
 聚焦	jfjj
-聚集	jfjj
 救济款	jfjk
 救济粮	jfjl
 醮	jfjm
@@ -53294,9 +53256,9 @@ GPRS	gprs
 劲往一处使	jwys
 解压缩	jwys
 九月	jwyv
-急用	jwyw
-鲫鱼	jwyw
 鲸鱼	jwyw
+鲫鱼	jwyw
+急用	jwyw
 解约	jwyx
 解	jwz
 角逐	jwza
@@ -69914,7 +69876,6 @@ GPRS	gprs
 难违	nlwg
 难忘	nlwh
 难闻	nlwj
-能为	nlwm
 难为	nlwm
 祢	nlwp
 难为情	nlwq
@@ -110599,9 +110560,8 @@ QQ密码	qqmm
 甚感	sfga
 是否关闭	sfgb
 酸根	sfgc
-世故	sfgf
-事功	sfgf
 事故	sfgf
+世故	sfgf
 是非功过	sfgg
 甚广	sfgh
 散光	sfgj
@@ -111222,6 +111182,7 @@ QQ密码	qqmm
 三所	sgsq
 山光水色	sgss
 三色	sgsw
+素色	sgsw
 上纲上线	sgsx
 瑟缩	sgsx
 寿桃	sgtc
@@ -115906,8 +115867,8 @@ QQ密码	qqmm
 十天半月	stby
 失败者	stbz
 秫	stc
-生存	stca
 生成	stca
+生存	stca
 生辰	stca
 稍迟	stcb
 生产队	stcd
@@ -116240,6 +116201,7 @@ QQ密码	qqmm
 生前	stum
 失窃	stun
 生气	stut
+升迁	stut
 升起	stuu
 失去	stuu
 算起	stuu
@@ -121519,8 +121481,8 @@ QQ密码	qqmm
 团小组	toxz
 贴	toy
 贴有	toya
-同义词	toyc
 同样	toyc
+同义词	toyc
 同源	toyd
 团圆饭	toyf
 图元	toyg
@@ -133023,8 +132985,8 @@ Z	vyz
 蜗行牛步	wxnb
 毋宁	wxnn
 绾	wxno
-毋宁死	wxns
 维纳斯	wxns
+毋宁死	wxns
 维纳	wxnx
 维普	wxpm
 维奇	wxqa
@@ -134975,8 +134937,8 @@ Z	vyz
 现当代	xgdd
 现代化	xgdh
 鬶	xgdi
-循规蹈矩	xgdj
 现代	xgdj
+循规蹈矩	xgdj
 修改代码	xgdm
 下岗多年	xgdn
 现代派	xgdp
@@ -135454,8 +135416,8 @@ Z	vyz
 胸怀天下	xhtx
 新奇	xhua
 雪橇	xhuc
-辛勤	xhuf
 需求	xhuf
+辛勤	xhuf
 雪球	xhug
 雪青	xhug
 辛弃疾	xhuj
@@ -135476,8 +135438,8 @@ Z	vyz
 新闻稿	xhwg
 玄武	xhwg
 序文	xhwh
-席位	xhwj
 新闻	xhwj
+席位	xhwj
 歆	xhwj
 夑	xhwk
 寻花问柳	xhwl
@@ -137862,7 +137824,6 @@ Z	vyz
 小叔子	xpsi
 小说家	xpsj
 小手	xpsk
-小视	xpsl
 小说	xpsl
 小市民	xpsm
 小数	xpsm
@@ -141646,43 +141607,35 @@ Z	vyz
 一周	ydiw
 越冬作物	ydiw
 一组	ydix
-一致性	ydix
-一支烟	ydiy
 一眨眼	ydiy
 一转眼	ydiy
 因地制宜	ydiy
-演奏员	ydiy
+一致性	ydix
 渝	ydj
 渔家傲	ydja
 渰	ydja
 洢	ydjb
 演剧	ydjb
 一极	ydjc
-沿江	ydjd
 游击队	ydjd
+沿江	ydjd
 一节	ydje
 一截	ydjf
 演讲稿	ydjg
 演进	ydjg
-一句话	ydjh
 演讲会	ydjh
 一家子	ydji
-以大局为重	ydji
 游击战	ydji
+以大局为重	ydji
 瀹	ydji
-一九九	ydjj
-一件件	ydjj
-一家家	ydjj
 油价	ydjj
 运动健将	ydjj
-一节课	ydjk
 演技	ydjk
 衣带渐宽	ydjk
-游记	ydjl
 演讲	ydjl
+游记	ydjl
 一剪梅	ydjm
 一地鸡毛	ydjm
-一进门	ydjm
 油煎	ydjm
 渔家	ydjn
 浴巾	ydjo
@@ -141692,16 +141645,16 @@ Z	vyz
 液晶	ydjr
 一件事	ydjs
 缘定今生	ydjs
-浟	ydjt
 淤积	ydjt
+浟	ydjt
 一劫	ydju
 渝	ydjv
 一角	ydjw
 一级	ydjx
 一家子	ydjz
 一架	ydjz
-以大局为重	ydjz
 游击战	ydjz
+以大局为重	ydjz
 油矿	ydka
 洋快餐	ydkc
 一块儿	ydke
@@ -143384,9 +143337,9 @@ Z	vyz
 眼花缭乱	yhll
 翊	yhll
 言论	yhll
-冶炼	yhlm
-意料	yhlm
 颜料	yhlm
+意料	yhlm
+冶炼	yhlm
 毅力	yhln
 夜里	yhlo
 音量	yhlr
@@ -154923,8 +154876,8 @@ Z	vyz
 自强	zrqb
 自洽	zrqd
 阵容强大	zrqd
-早期	zrqf
 追求	zrqf
+早期	zrqf
 自弃	zrqh
 最全	zrqj
 自谦	zrql
