--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -6733,8 +6733,8 @@ bilibili	blbl
 背板	bybc
 背包袱	bybf
 步步高	bybg
-不愠不火	bybh
 北部	bybh
+不愠不火	bybh
 不远不近	bybj
 步兵旅	bybl
 彪炳	bybm
@@ -13363,8 +13363,8 @@ bilibili	blbl
 储蓄存款	cxck
 纯粹	cxcm
 辰戌丑未	cxcw
-驰骋	cxcx
 纯纯	cxcx
+驰骋	cxcx
 纯粹性	cxcx
 诚心诚意	cxcy
 层见叠出	cxdc
@@ -18122,8 +18122,8 @@ bilibili	blbl
 盯	doff
 电饭锅	dofg
 黩	dofn
-䗖	dofo
 巅峰	dofo
+䗖	dofo
 巅	dofq
 睹	dofr
 电风扇	dofs
@@ -30435,9 +30435,9 @@ GPRS	gprs
 卦	guj
 赶集	gujj
 鼓劲	gujl
+赶紧	guju
 国庆假期	gujq
 国庆假期	guju
-赶紧	guju
 垙	gujw
 鼓角	gujw
 赶考	gukf
@@ -40617,8 +40617,8 @@ GPRS	gprs
 㑇	ijwb
 坐卧	ijwf
 债务国	ijwg
-众望	ijwh
 作文	ijwh
+众望	ijwh
 做文章	ijwi
 正襟危坐	ijwi
 至今为止	ijwi
@@ -42360,7 +42360,6 @@ GPRS	gprs
 蛀	iohd
 中韩	iohf
 忠魂	iohg
-中号	iohi
 账号	iohi
 中华	iohj
 崒	iohj
@@ -43829,11 +43828,10 @@ GPRS	gprs
 知本家	itbj
 知彼	itbk
 筑宾	itbn
-制版	itbr
+重兵	itbr
 竹帛	itbr
 自叹不如	itbr
 遮天蔽日	itbr
-重兵	itbr
 筑坝	itbu
 长膘	itbv
 制备	itbw
@@ -46901,8 +46899,8 @@ GPRS	gprs
 渐宽	jdkn
 济困	jdko
 泾	jdl
-激励	jdla
 激烈	jdla
+激励	jdla
 激灵	jdlb
 酒楼	jdlc
 激流	jdld
@@ -53435,7 +53433,6 @@ GPRS	gprs
 经互会	jxhh
 结婚照	jxhi
 结婚证	jxhi
-结伙	jxhj
 结合	jxhj
 绞	jxhk
 绝户	jxhl
@@ -56596,8 +56593,8 @@ GPRS	gprs
 慷	knh
 宽厚	knha
 客户部	knhb
-客户端	knhd
 快活	knhd
+客户端	knhd
 空耗	knhg
 空喊	knhi
 客户机	knhj
@@ -63796,10 +63793,8 @@ GPRS	gprs
 民族村	mbic
 民主党	mbid
 民政	mbif
-民主	mbih
-民主化	mbih
 民族	mbih
-民族化	mbih
+民主	mbih
 满不在乎	mbih
 弥足	mbii
 民主制	mbii
@@ -63919,10 +63914,8 @@ GPRS	gprs
 民族村	mbzc
 民主党	mbzd
 民政	mbzf
-民主	mbzh
-民主化	mbzh
 民族	mbzh
-民族化	mbzh
+民主	mbzh
 满不在乎	mbzh
 弥足	mbzi
 民众	mbzj
@@ -90888,9 +90881,9 @@ GPRS	gprs
 妐	osml
 嬡	osml
 嬨	osml
+欧美	osmm
 区	osmm
 婒	osmm
-欧美	osmm
 炁	osmm
 熙	osmm
 妢	osmn
@@ -133534,10 +133527,8 @@ Z	vyz
 寻死	xbsa
 虚不受补	xbsb
 虚不胜补	xbsb
-刑不上大夫	xbsf
-寻索	xbsf
-心不设防	xbsf
 迅速	xbsf
+刑不上大夫	xbsf
 小别胜新婚	xbsh
 小班授课	xbsk
 弦数	xbsm
@@ -134517,8 +134508,8 @@ Z	vyz
 下颚	xfei
 下浮	xffd
 西丰	xffg
-下方	xffh
 西方	xffh
+下方	xffh
 下翻	xffm
 下发	xffn
 西方人	xffr
@@ -134854,9 +134845,9 @@ Z	vyz
 西游记	xfyj
 西洋镜	xfyj
 协议	xfyl
-吸风饮露	xfyl
-心烦意乱	xfyl
 项羽	xfyl
+心烦意乱	xfyl
+吸风饮露	xfyl
 孝义	xfym
 下野	xfyo
 献殷勤	xfyq
@@ -137344,7 +137335,6 @@ Z	vyz
 宣言	xnyh
 学员	xnyi
 宣扬	xnyk
-学养	xnym
 性欲	xnym
 学园	xnyo
 学院派	xnyp
@@ -138592,6 +138582,8 @@ Z	vyz
 娴雅	xsys
 嫌疑	xsyw
 相视一笑	xsyx
+修身养性	xsyx
+休生养息	xsyx
 现实意义	xsyy
 协商一致	xsyz
 小事一桩	xsyz
@@ -143328,9 +143320,9 @@ Z	vyz
 衣领	yhlj
 慭	yhlk
 韵律	yhlk
+言论	yhll
 眼花缭乱	yhll
 翊	yhll
-言论	yhll
 颜料	yhlm
 意料	yhlm
 冶炼	yhlm
