--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -33678,6 +33678,7 @@ GPRS	gprs
 合订本	hjdb
 黄金搭档	hjdd
 盒带	hjdf
+化冻	hjdh
 货店	hjdh
 会党	hjdj
 会打	hjdk
@@ -52843,6 +52844,7 @@ GPRS	gprs
 系带	jwdf
 解毒	jwdg
 角度	jwdh
+解冻	jwdh
 °	jwdh
 几丁质	jwdi
 几点钟	jwdi
@@ -56628,9 +56630,9 @@ GPRS	gprs
 快节奏	knji
 空架子	knji
 空间站	knji
-快件	knjj
 快捷键	knjj
 空间	knjj
+快件	knjj
 快捷	knjk
 空军	knjl
 客家	knjn
@@ -61257,7 +61259,6 @@ GPRS	gprs
 罗马数字	lmsi
 类似	lmsj
 粮食	lmsj
-粮食局	lmsj
 龙门石窟	lmsk
 娄	lmss
 老谋深算	lmss
@@ -69673,8 +69674,8 @@ GPRS	gprs
 农场主	nlcz
 农大	nlda
 能动	nldg
-诺丁汉	nldh
 难度	nldh
+诺丁汉	nldh
 难倒	nldj
 难当	nldj
 难得	nldk
@@ -119970,9 +119971,8 @@ QQ密码	qqmm
 堂兄弟	tjxd
 体系	tjxe
 体协	tjxf
-体型	tjxg
-体形	tjxg
 体现	tjxg
+体形	tjxg
 体癣	tjxh
 体现在	tjxi
 团结协作	tjxi
@@ -123709,7 +123709,7 @@ QQ密码	qqmm
 清澈	udcd
 启动菜单	udcd
 沏茶	udce
-清醇	udcf
+清朝	udcf
 汽车股	udcg
 屈打成招	udci
 汽车站	udci
@@ -137039,9 +137039,9 @@ Z	vyz
 性命攸关	xmyg
 羞于	xmyg
 心满意足	xmyi
-信马由缰	xmyj
 炫耀	xmyj
 蓄谋已久	xmyj
+信马由缰	xmyj
 心明眼亮	xmyl
 凶焰	xmym
 幸免于难	xmyn
@@ -141335,10 +141335,10 @@ Z	vyz
 渊博	ydbf
 一帮	ydbg
 一杯羹	ydbg
+演变	ydbh
+浴霸	ydbh
 一把汗	ydbh
 一把火	ydbh
-浴霸	ydbh
-演变	ydbh
 一巴掌	ydbi
 一把抓	ydbi
 一辈子	ydbi
@@ -141468,17 +141468,13 @@ Z	vyz
 洋房	ydfl
 一番	ydfm
 一幅	ydfo
-一分钱	ydfq
 云淡风轻	ydfq
 以德服人	ydfr
+渔妇	ydfs
+淫妇	ydfs
 愿赌服输	ydfs
 有的放矢	ydfs
-淫妇	ydfs
-渔妇	ydfs
 漹	ydfs
-一幅图	ydft
-一分钱	ydfu
-云淡风清	ydfu
 云淡风轻	ydfu
 油坊	ydfu
 湮	ydfu
@@ -142155,6 +142151,7 @@ Z	vyz
 营长	yeit
 莜	yej
 药局	yejb
+营建	yejb
 药检	yejc
 一二九运动	yejd
 药酒	yejd
@@ -144722,8 +144719,8 @@ Z	vyz
 永恒	ylhn
 又回	ylho
 以后	ylhq
-一路货色	ylhs
 诱惑	ylhs
+一路货色	ylhs
 议和	ylht
 议会制	ylhz
 鱼龙混杂	ylhz
@@ -145525,8 +145522,8 @@ Z	vyz
 慵	ynhb
 宇航服	ynhf
 誉	ynhi
-宇航局	ynhj
 宴会	ynhj
+宇航局	ynhj
 忧欢	ynhl
 忧患	ynho
 宇航	ynhq
