--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -2255,8 +2255,8 @@ CPU	cpu
 勃	bfn
 不分南北	bfnb
 本年度	bfnd
-不分年龄	bfnl
 本能	bfnl
+不分年龄	bfnl
 鞁	bfnl
 逋	bfnn
 鬓	bfnr
@@ -18946,6 +18946,7 @@ bilibili	blbl
 敌后	dthq
 点头哈腰	dthy
 等职	dtif
+答主	dtih
 短装	dtih
 党团组织	dtii
 点头之交	dtij
@@ -22887,7 +22888,6 @@ bilibili	blbl
 讽谏	fljl
 费了劲了	fljl
 分裂间期	fljq
-法律解释	fljs
 福建省	fljs
 分裂间期	flju
 房角	fljw
@@ -24991,8 +24991,8 @@ bilibili	blbl
 奉为至宝	fwib
 负资产	fwic
 负载	fwif
-负罪感	fwig
 负责	fwig
+负罪感	fwig
 风姿	fwih
 负增长	fwii
 负债	fwij
@@ -25195,8 +25195,8 @@ bilibili	blbl
 奉为至宝	fwzb
 负资产	fwzc
 负载	fwzf
-负罪感	fwzg
 负责	fwzg
+负罪感	fwzg
 风姿	fwzh
 风噪	fwzi
 负债	fwzj
@@ -32979,8 +32979,8 @@ GPRS	gprs
 彗	hgbd
 环靶	hgbf
 环渤海	hgbh
-厚古薄今	hgbj
 环保	hgbj
+厚古薄今	hgbj
 环保局	hgbj
 环抱	hgbk
 慧	hgbl
@@ -35549,8 +35549,8 @@ GPRS	gprs
 后楼	hqlc
 后梁	hqld
 后来	hqlh
-航路	hqli
 后路	hqli
+航路	hqli
 后来者	hqli
 后拉	hqlk
 后两年	hqln
@@ -35639,8 +35639,8 @@ GPRS	gprs
 寒气袭人	hqxr
 航向	hqxr
 花拳绣腿	hqxt
-后续	hqxx
 航线	hqxx
+后续	hqxx
 后有	hqya
 后已	hqyb
 行情预测	hqyc
@@ -35909,7 +35909,6 @@ GPRS	gprs
 划出	hscv
 好处	hscw
 互	hsd
-好大	hsda
 好歹	hsda
 好多次	hsdc
 好得多	hsdd
@@ -35917,7 +35916,6 @@ GPRS	gprs
 虎视眈眈	hsdd
 好地方	hsdf
 互动	hsdg
-海水倒灌	hsdg
 轰动	hsdg
 划等号	hsdh
 好得很	hsdh
@@ -36081,10 +36079,9 @@ GPRS	gprs
 互连	hsls
 轰隆声	hsls
 互利	hslt
-好了	hslv
 轰隆	hslv
+好了	hslv
 互联网	hslw
-好来坞	hslw
 好莱坞	hslw
 胡思乱想	hslx
 婚龄	hsly
@@ -36092,8 +36089,8 @@ GPRS	gprs
 好梦	hsmc
 好么	hsme
 好卖	hsmf
-好吗	hsmi
 轰鸣	hsmi
+好吗	hsmi
 好命	hsmj
 毁尸灭迹	hsmj
 好美	hsmm
@@ -36171,8 +36168,8 @@ GPRS	gprs
 好说话	hssh
 好事者	hssi
 婚纱照	hssi
-好似	hssj
 好使	hssj
+好似	hssj
 浑身是劲	hssj
 好手	hssk
 黄色书刊	hssk
@@ -36212,9 +36209,9 @@ GPRS	gprs
 好强	hsub
 好去处	hsuc
 划清	hsud
+婚期	hsuf
 好巧	hsuf
 婚娶	hsuf
-婚期	hsuf
 好球	hsug
 婚庆	hsuh
 横扫千军	hsuj
@@ -36234,8 +36231,6 @@ GPRS	gprs
 好文	hswh
 好哇	hswi
 好望角	hswj
-好问	hswj
-好闻	hswj
 婚外恋	hswl
 划为	hswm
 婚外情	hswq
@@ -36249,8 +36244,8 @@ GPRS	gprs
 好小子	hsxi
 轰响	hsxi
 好像	hsxj
-好戏	hsxl
 或许	hsxl
+好戏	hsxl
 好学	hsxn
 好小	hsxp
 好心人	hsxr
@@ -36265,7 +36260,6 @@ GPRS	gprs
 后生小子	hsxz
 好小子	hsxz
 好友	hsya
-或有	hsya
 好样	hsyc
 好样的	hsyd
 好药	hsye
@@ -36355,8 +36349,6 @@ GPRS	gprs
 黄土高原	htgy
 氦	hth
 昏天黑地	hthd
-和会	hthj
-鹄候	hthj
 氦	hthk
 昏头昏脑	hthn
 虎头虎脑	hthn
@@ -36457,7 +36449,6 @@ GPRS	gprs
 后天下之乐而乐	htxl
 和稀泥	htxn
 和煦	htxr
-和血	htxr
 互通信息	htxx
 和音	htyh
 和议	htyl
@@ -36827,8 +36818,8 @@ GPRS	gprs
 互相帮助	hxbz
 缓办	hxbz
 幻	hxc
-红唇	hxca
 缓存	hxca
+红唇	hxca
 幻	hxcc
 红潮	hxcd
 红茶	hxce
@@ -36889,8 +36880,8 @@ GPRS	gprs
 欢欣鼓舞	hxgw
 骇	hxh
 混淆黑白	hxhb
-红海	hxhd
 绘画	hxhd
+红海	hxhd
 红花	hxhe
 红黄	hxhf
 好学好记	hxhj
@@ -36911,8 +36902,8 @@ GPRS	gprs
 红藻	hxie
 红枣	hxif
 互相照顾	hxig
-红妆	hxih
 红装	hxih
+红妆	hxih
 互相之间	hxij
 缓征	hxik
 河西走廊	hxil
@@ -36973,9 +36964,9 @@ GPRS	gprs
 缓	hxm
 红码	hxma
 好心没好报	hxmb
+红梅	hxmc
 幻梦	hxmc
 红木	hxmc
-红梅	hxmc
 幻灭	hxmd
 红玫瑰	hxmg
 红麻	hxmh
@@ -37118,9 +37109,9 @@ GPRS	gprs
 红油	hxyd
 红雨	hxyf
 红运	hxyg
-红与黑	hxyh
-红衣	hxyh
 红颜	hxyh
+红衣	hxyh
+红与黑	hxyh
 红叶	hxyi
 欢喜冤家	hxyj
 化学原料	hxyl
@@ -37144,8 +37135,8 @@ GPRS	gprs
 红藻	hxze
 红枣	hxzf
 互相照顾	hxzg
-红妆	hxzh
 红装	hxzh
+红妆	hxzh
 互相之间	hxzj
 缓征	hxzk
 河西走廊	hxzl
@@ -37232,9 +37223,9 @@ GPRS	gprs
 铪	hyj
 何以见得	hyjd
 铧	hyjf
-含英咀华	hyjh
 虎将	hyjh
 镐京	hyjh
+含英咀华	hyjh
 虎踞	hyji
 火眼金睛	hyjj
 行业健康	hyjk
@@ -37562,8 +37553,8 @@ GPRS	gprs
 丈人	iarj
 逐日	iarr
 砸	ias
-砸死	iasa
 砸碎	iasa
+砸死	iasa
 逐水	iasd
 在世	iasf
 在商	iash
@@ -37593,8 +37584,8 @@ GPRS	gprs
 左倾	iauj
 在前	iaum
 左迁	iaut
-左起	iauu
 砖墙	iauu
+左起	iauu
 砸钱	iauy
 磔	iaw
 砖瓦厂	iawc
@@ -37785,7 +37776,6 @@ GPRS	gprs
 正本清源	ibuy
 追本穷源	ibuy
 展望	ibwh
-属文	ibwh
 张望	ibwh
 展位	ibwj
 张无忌	ibwj
@@ -37800,12 +37790,10 @@ GPRS	gprs
 张学良	ibxl
 张旭	ibxw
 展销	ibxy
-张轩语	ibxy
 左膀右臂	ibyb
 在不远处	ibyc
-展颜	ibyh
-振臂一呼	ibyh
 昼夜	ibyh
+振臂一呼	ibyh
 致病因子	ibyi
 资本运作	ibyi
 张扬	ibyk
@@ -38080,8 +38068,8 @@ GPRS	gprs
 淄博	idbf
 治病	idbh
 重大变化	idbh
-泽被	idbl
 滋补	idbl
+泽被	idbl
 浙贝母	idbm
 沾边	idbn
 滋补品	idbp
@@ -38142,9 +38130,9 @@ GPRS	gprs
 涨红	idhx
 澡	idi
 澡	idic
+渣滓	idid
 沼泽	idid
 沼泽地	idid
-渣滓	idid
 注资	idih
 中东战争	idii
 站得住脚	idij
@@ -38386,8 +38374,8 @@ GPRS	gprs
 丈二和尚摸不着头脑	iehn
 葬在	ieia
 著者	ieif
-茁壮	ieih
 藏族	ieih
+茁壮	ieih
 罪恶昭彰	ieii
 著作	ieij
 著作权	ieiq
@@ -38500,8 +38488,8 @@ GPRS	gprs
 真棒	ifbc
 直逼	ifbd
 正本	ifbf
-支部	ifbh
 政变	ifbh
+支部	ifbh
 甄别	ifbi
 直播间	ifbj
 直播	ifbk
@@ -38562,8 +38550,8 @@ GPRS	gprs
 职代会	ifdh
 支队长	ifdi
 正电子	ifdi
-政党	ifdj
 正当	ifdj
+政党	ifdj
 真得	ifdk
 真谛	ifdl
 争分夺秒	ifdm
@@ -38573,8 +38561,8 @@ GPRS	gprs
 正当年	ifdn
 正电	ifdo
 真的	ifdr
-整顿	ifds
 遭到	ifds
+整顿	ifds
 政敌	ifdt
 整地	ifdu
 整队	ifdv
@@ -38585,8 +38573,8 @@ GPRS	gprs
 再而三	ifes
 整	iff
 支付宝	iffb
-政法	iffd
 正法	iffd
+政法	iffd
 煮沸	iffd
 执法犯法	ifff
 知法犯法	ifff
@@ -38648,9 +38636,9 @@ GPRS	gprs
 再回	ifho
 直航	ifhq
 朝晖	ifhr
-枣红色	ifhs
 正好	ifhs
 真好	ifhs
+枣红色	ifhs
 正和	ifht
 真坏	ifhu
 正红	ifhx
@@ -38661,8 +38649,8 @@ GPRS	gprs
 政治	ifid
 真正	ifif
 正直	ifif
-再者	ifif
 斟酌	ifif
+再者	ifif
 正职	ifif
 职责	ifig
 真主	ifih
@@ -38709,8 +38697,8 @@ GPRS	gprs
 髽	ifju
 再降	ifjv
 直角	ifjw
-政绩	ifjx
 正经	ifjx
+政绩	ifjx
 再就业	ifjy
 再教育	ifjy
 支架	ifjz
@@ -38720,7 +38708,6 @@ GPRS	gprs
 支开	ifkg
 真空管	ifkg
 再看	ifkk
-真快	ifkn
 真空	ifkn
 载客	ifkn
 整垮	ifku
@@ -38729,7 +38716,6 @@ GPRS	gprs
 支	ifl
 真灵	iflb
 栽楞	iflc
-执法力度	ifld
 支流	ifld
 直流	ifld
 直流电	ifld
@@ -38776,9 +38762,9 @@ GPRS	gprs
 鬃	ifng
 斟	ifni
 再拿	ifnj
+职能	ifnl
 真能	ifnl
 真难	ifnl
-职能	ifnl
 枣	ifnn
 整年	ifnt
 直	ifo
@@ -38790,7 +38776,6 @@ GPRS	gprs
 正品	ifpi
 直扑	ifpk
 真怕	ifpn
-整片	ifpr
 正牌	ifpr
 整篇	ifpt
 栽培	ifpu
@@ -38889,10 +38874,8 @@ GPRS	gprs
 政权	ifuc
 职权	ifuc
 支渠	ifud
-支取	ifuf
-正前方	ifuf
 正巧	ifuf
-直取	ifuf
+支取	ifuf
 支气管	ifug
 整齐	ifuh
 政企	ifuj
@@ -38902,15 +38885,14 @@ GPRS	gprs
 醉拳	ifum
 真情	ifun
 酌情	ifun
-政区	ifus
-正切	ifus
 真切	ifus
+政区	ifus
 朝气	ifut
 正气	ifut
 真气	ifut
 再去	ifuu
-再起	ifuu
 支起	ifuu
+再起	ifuu
 朝	ifv
 疐	ifvk
 鄑	ifvv
@@ -39371,8 +39353,8 @@ GPRS	gprs
 座标	ihbc
 装逼	ihbd
 遮蔽	ihbe
-主办方	ihbf
 资本	ihbf
+主办方	ihbf
 再好不过	ihbg
 这不过	ihbg
 专横跋扈	ihbh
@@ -39576,7 +39558,6 @@ GPRS	gprs
 疹	ihjq
 主讲人	ihjr
 庄稼人	ihjr
-作何解释	ihjs
 斋戒	ihjs
 这件事	ihjs
 庄稼	ihjt
@@ -40442,11 +40423,9 @@ GPRS	gprs
 坐庄	ijih
 作主	ijih
 做主	ijih
-伫足	ijii
 住嘴	ijii
-做足	ijii
+伫足	ijii
 自给自足	ijii
-资金周转	ijii
 做作	ijij
 住宅楼	ijil
 作证	ijil
@@ -40686,23 +40665,18 @@ GPRS	gprs
 作茧自缚	ijzf
 准静止锋	ijzf
 债转股	ijzg
-伫足	ijzi
 住嘴	ijzi
-做足	ijzi
+伫足	ijzi
 自给自足	ijzi
-资金周转	ijzi
 做作	ijzj
-做做	ijzj
 质检总局	ijzj
-住宅楼	ijzl
-佐证	ijzl
 作证	ijzl
-再接再厉	ijzl
 坐诊	ijzl
+佐证	ijzl
+再接再厉	ijzl
 仗着	ijzm
 住着	ijzm
 做着	ijzm
-坐着	ijzm
 住宅	ijzn
 做账	ijzo
 做贼	ijzo
@@ -45371,10 +45345,7 @@ GPRS	gprs
 驻守	ixsn
 终岁	ixso
 在线视频	ixsp
-纵是	ixsr
-纵身	ixsr
 终身	ixsr
-直线上升	ixss
 终生	ixst
 纵声	ixsu
 真心实意	ixsy
@@ -53136,8 +53107,8 @@ GPRS	gprs
 祭扫	jwsk
 祭祀	jwsl
 解说	jwsl
-急刹	jwsm
 解释	jwsm
+急刹	jwsm
 尽我所能	jwsn
 几岁	jwso
 几所	jwsq
@@ -53152,9 +53123,8 @@ GPRS	gprs
 角色	jwsw
 几丝	jwsx
 及时性	jwsx
-解释学	jwsx
-及时雨	jwsy
 解说员	jwsy
+及时雨	jwsy
 解锁	jwsy
 据我所知	jwsz
 节外生枝	jwsz
@@ -58123,9 +58093,7 @@ GPRS	gprs
 棱柱	lcic
 李政道	lcid
 林芝	lcie
-李泽厚	lcih
 楼主	lcih
-楼座	lcih
 临床症状	lcii
 乱臣贼子	lcii
 梠	lcii
@@ -65195,8 +65163,8 @@ GPRS	gprs
 美好回忆	mhhy
 魔杖	mhic
 蛮荒之地	mhid
-美好祝福	mhif
 麻醉	mhif
+美好祝福	mhif
 魔族	mhih
 麻疹	mhih
 明火执仗	mhii
@@ -65206,7 +65174,6 @@ GPRS	gprs
 麻醉剂	mhij
 麻醉科	mhik
 魔怔	mhin
-麻织品	mhip
 麻醉品	mhip
 魔爪	mhiq
 麻醉师	mhis
@@ -103502,6 +103469,7 @@ GPRS	gprs
 穷寇勿追	qkwz
 抢险车	qkxc
 抢修	qkxj
+抢戏	qkxj
 抢先	qkxt
 抢险	qkxv
 抢鲜	qkxw
@@ -112942,8 +112910,8 @@ QQ密码	qqmm
 神回复	slhf
 双簧管	slhg
 生龙活虎	slhh
-双号	slhi
 社会	slhj
+神化	slhj
 识货	slhj
 谇	slhj
 诗行	slhk
@@ -113887,10 +113855,9 @@ QQ密码	qqmm
 送信人	smxr
 数小时	smxs
 首先是	smxs
-数学题	smxt
-烧香	smxt
 首先	smxt
 首选	smxt
+烧香	smxt
 受限	smxv
 数学系	smxx
 送些	smxy
@@ -116253,6 +116220,7 @@ QQ密码	qqmm
 上吐下泻	stxx
 生锈	stxy
 乘	sty
+生硬	stya
 私有	stya
 生涯	styd
 私营	stye
@@ -116634,9 +116602,9 @@ QQ密码	qqmm
 收件人	svjr
 胜景	svjr
 随机数	svjs
-收监	svju
 收紧	svju
 胜境	svju
+收监	svju
 腧	svjv
 疏解	svjw
 收件箱	svjx
@@ -119114,8 +119082,8 @@ QQ密码	qqmm
 吞吐	tgti
 天体	tgtj
 天堂	tgtj
-吞吐量	tgtl
 天台	tgtl
+吞吐量	tgtl
 珽	tgtl
 天堂鸟	tgtn
 天台山	tgts
@@ -125521,6 +125489,7 @@ QQ密码	qqmm
 穷寇勿追	ukwz
 抢险车	ukxc
 抢修	ukxj
+抢戏	ukxl
 抢先	ukxt
 抢险	ukxv
 抢鲜	ukxw
@@ -134880,8 +134849,8 @@ Z	vyz
 西征	xfzk
 下诏	xfzl
 兴风作浪	xfzl
-下着	xfzm
 西直门	xfzm
+下着	xfzm
 协助	xfzo
 协奏曲	xfzq
 先发制人	xfzr
@@ -134910,8 +134879,8 @@ Z	vyz
 现病史	xgbs
 现编	xgbx
 形成	xgca
-现存	xgca
 现成	xgca
+现存	xgca
 型材	xgcc
 现场会	xgch
 瑕疵	xgch
@@ -135900,10 +135869,10 @@ Z	vyz
 信噪比	xjib
 信札	xjic
 修治	xjid
-休整	xjif
-休止符	xjif
 修正	xjif
+休整	xjif
 修真	xjif
+休止符	xjif
 像章	xjih
 闲坐	xjij
 修撰	xjik
@@ -140945,9 +140914,9 @@ Z	vyz
 引起	ybqu
 义不容辞	ybrc
 引人	ybrj
-原班人马	ybrm
 引入	ybrm
 引燃	ybrm
+原班人马	ybrm
 用兵如神	ybrs
 已然	ybrv
 已然	ybrw
@@ -142839,9 +142808,9 @@ Z	vyz
 于	ygii
 言归正传	ygii
 远足	ygii
-有过之而无不及	ygij
 运作	ygij
 远征军	ygij
+有过之而无不及	ygij
 远征	ygik
 远祖	ygil
 艳照门	ygim
@@ -143085,9 +143054,9 @@ Z	vyz
 瑶族	ygzh
 艳妆	ygzh
 远足	ygzi
-有过之而无不及	ygzj
 运作	ygzj
 远征军	ygzj
+有过之而无不及	ygzj
 远征	ygzk
 远祖	ygzl
 艳照门	ygzm
@@ -145759,18 +145728,18 @@ Z	vyz
 邮发	yofz
 园	yog
 因故	yogf
-圆滚滚	yogg
 圆规	yogg
+圆滚滚	yogg
 圆鼓鼓	yogg
 眼光	yogj
 因果律	yogl
 眼观	yogl
 因公	yogm
-因果	yogo
 邮购	yogo
+因果	yogo
 野鬼	yogr
-圆管	yogt
 遗稿	yogt
+圆管	yogt
 遗孤	yogv
 野狗	yogw
 圆钢	yogy
@@ -145779,16 +145748,16 @@ Z	vyz
 圆滑	yohd
 眼花	yohe
 幽魂	yohg
-圆号	yohi
 幽会	yohj
+圆号	yohi
 央行	yohk
 圆谎	yohl
 野火	yohm
+遗憾	yohn
 遇害	yohn
 遗恨	yohn
-遗憾	yohn
-遗骸	yoho
 黝黑	yoho
+遗骸	yoho
 蚁后	yohq
 蝣	yoht
 婴孩	yohv
@@ -149916,8 +149885,8 @@ Z	vyz
 淄博	zdbf
 治病	zdbh
 重大变化	zdbh
-泽被	zdbl
 滋补	zdbl
+泽被	zdbl
 浙贝母	zdbm
 沾边	zdbn
 滋补品	zdbp
@@ -150340,8 +150309,8 @@ Z	vyz
 真棒	zfbc
 直逼	zfbd
 正本	zfbf
-支部	zfbh
 政变	zfbh
+支部	zfbh
 甄别	zfbi
 直播间	zfbj
 再拜	zfbk
@@ -150664,10 +150633,8 @@ Z	vyz
 政权	zfqc
 职权	zfqc
 支渠	zfqd
-支取	zfqf
-正前方	zfqf
 正巧	zfqf
-直取	zfqf
+支取	zfqf
 支气管	zfqg
 整齐	zfqh
 政企	zfqj
@@ -151217,8 +151184,8 @@ Z	vyz
 座标	zhbc
 装逼	zhbd
 遮蔽	zhbe
-主办方	zhbf
 资本	zhbf
+主办方	zhbf
 再好不过	zhbg
 这不过	zhbg
 专横跋扈	zhbh
@@ -151443,7 +151410,6 @@ Z	vyz
 疹	zhjq
 主讲人	zhjr
 庄稼人	zhjr
-作何解释	zhjs
 斋戒	zhjs
 这件事	zhjs
 庄稼	zhjt
@@ -152131,9 +152097,8 @@ Z	vyz
 债转股	zjig
 伫足	zjii
 住嘴	zjii
-做足	zjii
+伫足	zjii
 自给自足	zjii
-资金周转	zjii
 做作	zjij
 做做	zjij
 质检总局	zjij
