--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -58570,6 +58570,7 @@ GPRS	gprs
 劳宫	legn
 落果	lego
 蕾	leh
+蓝海	lehd
 芦荟	lehe
 莲花	lehe
 落花	lehe
@@ -114379,6 +114380,7 @@ QQ密码	qqmm
 申冤	soyl
 山羊	soym
 赡养	soym
+申遗	soyo
 山崖	soyo
 山野	soyo
 睡眼	soyo
