20240608-015144：对比删词和脚本删词。

--- a/rime/zzdyx_mod.dict.yaml
+++ b/rime/zzdyx_mod.dict.yaml
@@ -3700,13 +3700,13 @@ CPU	cpu
 播出	bkcv
 摒除	bkcv
 彼此	bkcy
-彼得堡	bkdb
 报导	bkdb
+彼得堡	bkdb
 摆渡	bkdd
 不可多得	bkdd
 摆荡	bkde
-拨动	bkdg
 摆动	bkdg
+拨动	bkdg
 报端	bkdh
 拜倒	bkdj
 拔掉	bkdk
@@ -30909,7 +30909,6 @@ GPRS	gprs
 缟	gxh
 缟	gxhi
 缟	gxho
-感谢支持	gxic
 贯注	gxid
 广西壮族	gxii
 给足	gxii
@@ -31002,7 +31001,6 @@ GPRS	gprs
 给氧	gxyt
 改弦易辙	gxyz
 更弦易辙	gxyz
-感谢支持	gxzc
 贯注	gxzd
 给足	gxzi
 贯众	gxzj
@@ -35837,8 +35835,8 @@ GPRS	gprs
 好端端	hsdd
 虎视眈眈	hsdd
 好地方	hsdf
-互动	hsdg
 轰动	hsdg
+互动	hsdg
 划等号	hsdh
 好得很	hsdh
 海水淡化	hsdh
@@ -37828,7 +37826,6 @@ GPRS	gprs
 祖传秘方	icmf
 总参谋长	icmi
 栅门	icmj
-支持媒体	icmt
 棕毛	icmt
 棕	icn
 正常年份	icnf
@@ -38397,12 +38394,10 @@ GPRS	gprs
 再次	ifch
 正常化	ifch
 再创造	ifci
-支持者	ifci
 直肠子	ifci
 正常	ifcj
 支持	ifck
 支撑	ifck
-支持率	ifcl
 真诚	ifcl
 真彩	ifcm
 真惨	ifcn
@@ -38707,9 +38702,9 @@ GPRS	gprs
 正手	ifsk
 甄	ifsk
 直视	ifsl
+遭受	ifsm
 整数	ifsm
 真善美	ifsm
-遭受	ifsm
 真实	ifsn
 正史	ifso
 直射	ifsr
@@ -38721,8 +38716,8 @@ GPRS	gprs
 真实性	ifsx
 直上	ifsy
 政	ift
-正厅	ifta
 正态	ifta
+正厅	ifta
 直通车	iftc
 再添	iftd
 煮汤	iftd
@@ -38759,6 +38754,7 @@ GPRS	gprs
 真情	ifun
 酌情	ifun
 真切	ifus
+正切	ifus
 政区	ifus
 朝气	ifut
 正气	ifut
@@ -38903,12 +38899,11 @@ GPRS	gprs
 治国安邦	igab
 专案组	igai
 琢	igak
-专爱	igam
 珍爱	igam
+专爱	igam
 专案	igan
 众寡不敌	igbd
 珍宝岛	igbd
-珠宝店	igbd
 珍本	igbf
 知过必改	igbg
 专病	igbh
@@ -39259,8 +39254,8 @@ GPRS	gprs
 资材	ihcc
 主菜	ihce
 主裁	ihcf
-痔疮	ihch
 资产	ihch
+痔疮	ihch
 震颤	ihch
 主唱	ihci
 主创	ihcj
@@ -39350,9 +39345,6 @@ GPRS	gprs
 作何感想	ihgx
 最惠国待遇	ihgy
 装	ihh
-主河道	ihhd
-主航道	ihhd
-疰	ihhd
 装潢	ihhd
 麈	ihhd
 座号	ihhi
@@ -39421,9 +39413,9 @@ GPRS	gprs
 主讲	ihjl
 壮怀激烈	ihjl
 主界面	ihjm
-壮举	ihjn
-庄家	ihjn
 震惊	ihjn
+庄家	ihjn
+壮举	ihjn
 主见	ihjo
 疹	ihjq
 主讲人	ihjr
@@ -39484,8 +39476,6 @@ GPRS	gprs
 粢	ihmk
 主谋	ihml
 准妈妈	ihmm
-壮美	ihmm
-状貌	ihmm
 主脉	ihmv
 站名	ihmw
 主母	ihmx
@@ -39535,7 +39525,6 @@ GPRS	gprs
 章	ihrf
 主人公	ihrg
 主人	ihrj
-主人家	ihrj
 主任	ihrj
 族人	ihrj
 壮热	ihrk
@@ -39570,8 +39559,8 @@ GPRS	gprs
 准时	ihsr
 妆	ihss
 壮士	ihsu
-姿色	ihsw
 装饰	ihsw
+姿色	ihsw
 准绳	ihsx
 综合收益	ihsy
 装上	ihsy
@@ -39675,8 +39664,8 @@ GPRS	gprs
 资源部	ihyb
 座椅	ihyc
 装样	ihyc
-主演	ihyd
 资源	ihyd
+主演	ihyd
 主营	ihye
 主要	ihyf
 庄严	ihyf
@@ -39705,13 +39694,12 @@ GPRS	gprs
 主战场	ihzc
 主枝	ihzc
 主治	ihzd
-主政	ihzf
-站直	ihzf
 装载	ihzf
 资政	ihzf
-壮族	ihzh
+主政	ihzf
+站直	ihzf
 症状	ihzh
-站姿	ihzh
+壮族	ihzh
 贼喊捉贼	ihzi
 站住	ihzj
 遮住	ihzj
@@ -39812,9 +39800,9 @@ GPRS	gprs
 足底	iidh
 只当	iidj
 只得	iidk
-中值定理	iidl
-只对	iidl
 只读	iidl
+只对	iidl
+中值定理	iidl
 只道	iidm
 足智多谋	iidm
 自作多情	iidq
@@ -39871,8 +39859,8 @@ GPRS	gprs
 咋整	iiif
 只准	iiih
 在这之后	iiih
-咂嘴	iiii
 踯躅	iiii
+咂嘴	iiii
 自作主张	iiii
 重中之重	iiii
 浊者自浊	iiii
@@ -39898,9 +39886,9 @@ GPRS	gprs
 谆谆教导	iijd
 中直机关	iijg
 只进	iijg
-谆谆教诲	iijh
-足迹	iijh
 踪迹	iijh
+足迹	iijh
+谆谆教诲	iijh
 啁啾	iiji
 字斟句酌	iiji
 智者见智	iiji
@@ -40039,9 +40027,9 @@ GPRS	gprs
 只算	iist
 咋舌	iist
 站着说话不腰疼	iist
+噪声	iisu
 吱声	iisu
 咥	iisu
-噪声	iisu
 只收	iisv
 嘴上	iisy
 咋	iit
@@ -40174,8 +40162,8 @@ GPRS	gprs
 坐不住	ijbi
 坐标轴	ijbi
 招架不住	ijbi
-作伴	ijbj
 做伴	ijbj
+作伴	ijbj
 真金不怕火炼	ijbl
 作弊	ijbm
 侦办	ijbn
@@ -40205,18 +40193,17 @@ GPRS	gprs
 铢积寸累	ijcl
 侦察	ijcn
 坐船	ijcq
-作家出版社	ijcs
 坐车	ijcs
 折戟沉沙	ijcs
 做出	ijcv
 住处	ijcw
 走街串巷	ijcx
+做错	ijcy
+值此	ijcy
 佐餐	ijcy
 侦察员	ijcy
-值此	ijcy
-做错	ijcy
-作大	ijda
 做大	ijda
+作大	ijda
 针灸大成	ijdc
 做得到	ijdd
 洲际导弹	ijdd
@@ -40287,10 +40274,10 @@ GPRS	gprs
 准静止锋	ijif
 债转股	ijig
 债主	ijih
+做主	ijih
 坐姿	ijih
 坐庄	ijih
 作主	ijih
-做主	ijih
 住嘴	ijii
 伫足	ijii
 自给自足	ijii
@@ -40316,9 +40303,9 @@ GPRS	gprs
 做就	ijjh
 作践	ijji
 捉襟见肘	ijji
+做假	ijjj
 仗剑	ijjj
 作价	ijjj
-做假	ijjj
 传记	ijjl
 作家	ijjn
 作贱	ijjo
@@ -40329,8 +40316,8 @@ GPRS	gprs
 掌	ijk
 做苦工	ijkg
 住口	ijki
-坐看	ijkk
 掌控	ijkk
+坐看	ijkk
 在京开幕	ijkm
 作客	ijkn
 坐困	ijko
@@ -40374,9 +40361,9 @@ GPRS	gprs
 闸	ijo
 俎	ijod
 畲	ijod
-仲	ijoi
 作呕	ijoi
 闸	ijoi
+仲	ijoi
 侧	ijou
 侦破	ijpa
 做派	ijpd
@@ -40438,8 +40425,8 @@ GPRS	gprs
 作痛	ijth
 侦听	ijti
 坐堂	ijtj
-侏	ijtk
 侦探	ijtk
+侏	ijtk
 坐台	ijtl
 针灸推拿	ijtn
 作图	ijto
@@ -40486,14 +40473,14 @@ GPRS	gprs
 仲夏	ijxa
 住校	ijxc
 逐渐形成	ijxc
-坐享	ijxh
 坐席	ijxh
+坐享	ijxh
 专家学者	ijxi
 作响	ijxi
 坐像	ijxj
 住行	ijxk
-做戏	ijxl
 掌心	ijxl
+做戏	ijxl
 做小	ijxp
 作息	ijxr
 作秀	ijxt
@@ -40517,7 +40504,6 @@ GPRS	gprs
 侦	ijyo
 倬	ijyr
 作业	ijyu
-众院	ijyv
 住院	ijyv
 作用	ijyw
 做游戏	ijyx
@@ -40563,9 +40549,9 @@ GPRS	gprs
 招安	ikan
 撰	ikb
 振臂	ikbb
-找不出	ikbc
-招标	ikbc
 指标	ikbc
+招标	ikbc
+找不出	ikbc
 找不到	ikbd
 搌	ikbf
 找病	ikbh
@@ -40819,8 +40805,8 @@ GPRS	gprs
 抓屏	ikpb
 拙朴	ikpc
 指派	ikpd
-征聘	ikpf
 招聘	ikpf
+征聘	ikpf
 找平	ikph
 招聘会	ikph
 扎啤	ikpi
@@ -40848,8 +40834,8 @@ GPRS	gprs
 撮	ikrf
 哲人	ikrj
 找人	ikrj
-招认	ikrl
 指认	ikrl
+招认	ikrl
 撞入	ikrm
 择日	ikrr
 晢	ikrr
@@ -40910,10 +40896,10 @@ GPRS	gprs
 挣	ikwb
 扺	ikwc
 鸷	ikwd
-征文	ikwh
-执委会	ikwh
 指望	ikwh
 撰文	ikwh
+征文	ikwh
+执委会	ikwh
 执	ikwk
 指为	ikwm
 专科文凭	ikwp
@@ -40946,10 +40932,9 @@ GPRS	gprs
 折线	ikxx
 找些	ikxy
 征友	ikya
-择友	ikya
 挚友	ikya
-招引	ikyb
 指引	ikyb
+招引	ikyb
 众口一词	ikyc
 只可意会，不可言传	ikyc
 择一	ikyd
@@ -41025,18 +41010,16 @@ GPRS	gprs
 坐冷板凳	ilbd
 之本	ilbf
 之邦	ilbg
-之变	ilbh
 珠联璧合	ilbh
+之变	ilbh
 之别	ilbi
 之便	ilbj
-战略布局	ilbj
 之八	ilbm
 之宝	ilbn
 之败	ilbo
 支楞八翘	ilbq
 诸般	ilbq
 之比	ilbs
-战略部署	ilbs
 之笔	ilbt
 支楞八翘	ilbu
 争论不休	ilbx
@@ -41046,14 +41029,14 @@ GPRS	gprs
 之春	ilcg
 祖冲之	ilci
 祖传	ilcj
-之初	ilcl
-祝词	ilcl
 证词	ilcl
+祝词	ilcl
+之初	ilcl
 之差	ilcm
 诊察	ilcn
 治理措施	ilcs
-之称	ilct
 祝辞	ilct
+之称	ilct
 之城	ilcu
 诛除	ilcv
 之处	ilcw
@@ -41073,7 +41056,6 @@ GPRS	gprs
 之敌	ildt
 之地	ildu
 诸多	ildw
-战略地位	ildw
 诊断学	ildx
 之恶	ilef
 之二	ileg
@@ -41083,7 +41065,6 @@ GPRS	gprs
 之法	ilfd
 种类繁多	ilfd
 证	ilfd
-战略方针	ilfi
 振聋发聩	ilfk
 祝福	ilfl
 诹	ilfl
@@ -41111,9 +41092,7 @@ GPRS	gprs
 祖国	ilgo
 自力更生	ilgs
 之隔	ilgv
-战略构想	ilgx
 谪	ilh
-战略伙伴	ilhb
 之海	ilhd
 之花	ilhe
 谪	ilhf
@@ -41134,15 +41113,12 @@ GPRS	gprs
 谆	ilhv
 祝贺	ilhz
 祝	ili
-智力支持	ilic
 治理整顿	ilid
 诊治	ilid
 之职	ilif
 之责	ilig
 之主	ilih
-自律组织	ilii
 诅咒	ilii
-专栏作家	ilij
 之众	ilij
 之作	ilij
 自乱阵脚	ilij
@@ -41158,7 +41134,6 @@ GPRS	gprs
 转来转去	iliq
 之最	ilir
 之至	ilis
-战略战术	ilis
 褶皱山	ilis
 之长	ilit
 之志	iliu
@@ -41175,7 +41150,6 @@ GPRS	gprs
 谪居	iljb
 之机词	iljc
 之极	iljc
-战略决策	iljc
 祝酒辞	iljc
 祝酒	iljd
 肇基	iljf
@@ -41225,7 +41199,6 @@ GPRS	gprs
 之力	illz
 禚	ilm
 之面	ilma
-战略目标	ilmb
 之梦	ilmc
 指路明灯	ilmd
 诛灭	ilmd
@@ -41359,9 +41332,7 @@ GPRS	gprs
 指鹿为马	ilwm
 谵	ilwm
 证悟	ilwn
-战略武器	ilwq
 证物	ilwt
-战略武器	ilwu
 之外	ilww
 之夏	ilxa
 之想	ilxc
@@ -41372,7 +41343,6 @@ GPRS	gprs
 之效	ilxh
 之需	ilxh
 指令性计划	ilxh
-战略协作	ilxi
 直立行走	ilxi
 蚤休	ilxj
 之行	ilxk
@@ -41394,7 +41364,6 @@ GPRS	gprs
 之异	ilyb
 之一	ilyd
 之源	ilyd
-战略要地	ilyd
 祉	ilyd
 之药	ilye
 之于	ilyg
@@ -41416,7 +41385,6 @@ GPRS	gprs
 钟灵毓秀	ilyx
 之虞	ilyy
 诏	ilz
-智力支持	ilzc
 之治	ilzd
 治理整顿	ilzd
 诊治	ilzd
@@ -41425,10 +41393,8 @@ GPRS	gprs
 之责	ilzg
 之主	ilzh
 证章	ilzh
-自律组织	ilzi
 诅咒	ilzi
 诏	ilzi
-专栏作家	ilzj
 之众	ilzj
 之作	ilzj
 自乱阵脚	ilzj
@@ -41448,7 +41414,6 @@ GPRS	gprs
 之最	ilzr
 证照	ilzr
 之至	ilzs
-战略战术	ilzs
 褶皱山	ilzs
 之重	ilzt
 之长	ilzt
@@ -42944,7 +42909,6 @@ GPRS	gprs
 自来水	irls
 自利	irlt
 自留	irlw
-自律性	irlx
 自力	irlz
 照	irm
 照面	irma
@@ -45510,7 +45474,6 @@ GPRS	gprs
 占领区	iylq
 择优录取	iylq
 镇流器	iylq
-战略上	iyls
 正言厉色	iyls
 正颜厉色	iyls
 战乱	iylt
@@ -45518,7 +45481,6 @@ GPRS	gprs
 择优录取	iylu
 镇流器	iylu
 占了	iylv
-战略性	iylx
 择优录用	iyly
 战力	iylz
 桌面	iyma
@@ -45928,7 +45890,6 @@ GPRS	gprs
 君主	jbih
 君	jbii
 犟嘴	jbii
-剧作家	jbij
 居住	jbij
 即指	jbik
 君子兰	jbil
@@ -46161,7 +46122,6 @@ GPRS	gprs
 尽责	jbzg
 君主	jbzh
 犟嘴	jbzi
-剧作家	jbzj
 居住	jbzj
 即指	jbzk
 君子兰	jbzl
@@ -60291,7 +60251,6 @@ GPRS	gprs
 劣迹昭著	ljii
 闾	ljii
 例证	ljil
-廉洁自律	ljil
 领着	ljim
 领罪	ljio
 临界状态	ljit
@@ -60438,7 +60397,6 @@ GPRS	gprs
 邻座	ljzh
 领章	ljzh
 例证	ljzl
-廉洁自律	ljzl
 领着	ljzm
 领罪	ljzo
 临界状态	ljzt
@@ -70329,7 +70287,6 @@ GPRS	gprs
 女足	nsii
 奶嘴	nsii
 女主角	nsij
-女作家	nsij
 娘子军	nsij
 女主内	nsin
 奶罩	nsio
@@ -70533,7 +70490,6 @@ GPRS	gprs
 女足	nszi
 奶嘴	nszi
 女主角	nszj
-女作家	nszj
 娘子军	nszj
 女主内	nszn
 奶罩	nszo
@@ -103314,7 +103270,6 @@ GPRS	gprs
 祁红	qlhx
 启	qli
 请在	qlia
-全力支持	qlic
 清理整顿	qlid
 勤劳致富	qlif
 谴责	qlig
@@ -103506,7 +103461,6 @@ GPRS	gprs
 琼楼玉宇	qlyy
 劝	qlz
 请在	qlza
-全力支持	qlzc
 清理整顿	qlzd
 勤劳致富	qlzf
 谴责	qlzg
@@ -125286,7 +125240,6 @@ QQ密码	qqmm
 祁红	ulhx
 启	uli
 请在	ulia
-全力支持	ulic
 清理整顿	ulid
 勤劳致富	ulif
 谴责	ulig
@@ -125473,7 +125426,6 @@ QQ密码	qqmm
 琼楼玉宇	ulyy
 劝	ulz
 请在	ulza
-全力支持	ulzc
 清理整顿	ulzd
 勤劳致富	ulzf
 谴责	ulzg
@@ -149396,7 +149348,6 @@ Z	vyz
 枝蔓	zcme
 祖传秘方	zcmf
 栅门	zcmj
-支持媒体	zcmt
 棕毛	zcmt
 总参谋长	zcmz
 棕	zcn
@@ -149974,7 +149925,6 @@ Z	vyz
 正常	zfcj
 支持	zfck
 支撑	zfck
-支持率	zfcl
 真诚	zfcl
 真彩	zfcm
 真惨	zfcn
@@ -149991,7 +149941,6 @@ Z	vyz
 正处	zfcw
 正餐	zfcy
 再创造	zfcz
-支持者	zfcz
 直肠子	zfcz
 再	zfd
 直达	zfda
@@ -150963,14 +150912,13 @@ Z	vyz
 主战场	zhic
 主枝	zhic
 主治	zhid
-主政	zhif
-站直	zhif
 装载	zhif
 资政	zhif
+主政	zhif
+站直	zhif
 站好最后一班岗	zhig
-壮族	zhih
 症状	zhih
-站姿	zhih
+壮族	zhih
 咨	zhii
 贼喊捉贼	zhii
 站住	zhij
@@ -151025,9 +150973,9 @@ Z	vyz
 主讲	zhjl
 壮怀激烈	zhjl
 主界面	zhjm
+震惊	zhjn
 壮举	zhjn
 庄家	zhjn
-震惊	zhjn
 主见	zhjo
 疹	zhjq
 主讲人	zhjr
@@ -151139,7 +151087,6 @@ Z	vyz
 章	zhrf
 主人公	zhrg
 主人	zhrj
-主人家	zhrj
 主任	zhrj
 族人	zhrj
 壮热	zhrk
@@ -151172,8 +151119,8 @@ Z	vyz
 准时	zhsr
 妆	zhss
 壮士	zhsu
-姿色	zhsw
 装饰	zhsw
+姿色	zhsw
 准绳	zhsx
 综合收益	zhsy
 装上	zhsy
@@ -151279,8 +151226,8 @@ Z	vyz
 资源部	zhyb
 座椅	zhyc
 装样	zhyc
-主演	zhyd
 资源	zhyd
+主演	zhyd
 主营	zhye
 主要	zhyf
 庄严	zhyf
@@ -151435,8 +151382,8 @@ Z	vyz
 只占	ziiy
 唑	zij
 只进	zijg
-足迹	zijh
 踪迹	zijh
+足迹	zijh
 啁啾	ziji
 只讲	zijl
 只觉	zijn
@@ -151517,9 +151464,9 @@ Z	vyz
 只是	zisr
 只剩	zist
 咋舌	zist
+噪声	zisu
 吱声	zisu
 咥	zisu
-噪声	zisu
 只收	zisv
 嘴上	zisy
 咋	zit
@@ -151579,8 +151526,8 @@ Z	vyz
 只知道	zizd
 咋整	zizf
 只准	zizh
-咂嘴	zizi
 踯躅	zizi
+咂嘴	zizi
 只做	zizj
 足总	zizm
 只字	zizn
@@ -151602,8 +151549,8 @@ Z	vyz
 值班	zjbg
 作别	zjbi
 坐不住	zjbi
-作伴	zjbj
 做伴	zjbj
+作伴	zjbj
 真金不怕火炼	zjbl
 作弊	zjbm
 侦办	zjbn
@@ -151634,7 +151581,6 @@ Z	vyz
 铢积寸累	zjcl
 侦察	zjcn
 坐船	zjcq
-作家出版社	zjcs
 坐车	zjcs
 折戟沉沙	zjcs
 做出	zjcv
@@ -151747,9 +151693,9 @@ Z	vyz
 住进	zjjg
 做就	zjjh
 作践	zjji
+做假	zjjj
 仗剑	zjjj
 作价	zjjj
-做假	zjjj
 传记	zjjl
 作家	zjjn
 作贱	zjjo
@@ -151761,8 +151707,8 @@ Z	vyz
 掌	zjk
 做苦工	zjkg
 住口	zjki
-坐看	zjkk
 掌控	zjkk
+坐看	zjkk
 在京开幕	zjkm
 作客	zjkn
 坐困	zjko
@@ -151806,8 +151752,9 @@ Z	vyz
 闸	zjo
 俎	zjod
 畲	zjod
-仲	zjoi
 作呕	zjoi
+仲	zjoi
+闸	zjoi
 侧	zjou
 侦破	zjpa
 做派	zjpd
@@ -151868,8 +151815,8 @@ Z	vyz
 作痛	zjth
 侦听	zjti
 坐堂	zjtj
-侏	zjtk
 侦探	zjtk
+侏	zjtk
 坐台	zjtl
 针灸推拿	zjtn
 作图	zjto
@@ -151915,13 +151862,13 @@ Z	vyz
 仲夏	zjxa
 住校	zjxc
 逐渐形成	zjxc
-坐享	zjxh
 坐席	zjxh
+坐享	zjxh
 作响	zjxi
 坐像	zjxj
 住行	zjxk
-做戏	zjxl
 掌心	zjxl
+做戏	zjxl
 做小	zjxp
 作息	zjxr
 作秀	zjxt
@@ -151945,7 +151892,6 @@ Z	vyz
 侦	zjyo
 倬	zjyr
 作业	zjyu
-众院	zjyv
 住院	zjyv
 作用	zjyw
 做游戏	zjyx
@@ -151961,10 +151907,10 @@ Z	vyz
 准静止锋	zjzf
 债转股	zjzg
 债主	zjzh
+做主	zjzh
 坐姿	zjzh
 坐庄	zjzh
 作主	zjzh
-做主	zjzh
 住嘴	zjzi
 做作	zjzj
 住宅楼	zjzl
@@ -151993,9 +151939,9 @@ Z	vyz
 招安	zkan
 撰	zkb
 振臂	zkbb
-找不出	zkbc
-招标	zkbc
 指标	zkbc
+招标	zkbc
+找不出	zkbc
 找不到	zkbd
 搌	zkbf
 找病	zkbh
@@ -152259,8 +152205,8 @@ Z	vyz
 抓屏	zkpb
 拙朴	zkpc
 指派	zkpd
-征聘	zkpf
 招聘	zkpf
+征聘	zkpf
 找平	zkph
 招聘会	zkph
 扎啤	zkpi
@@ -152288,8 +152234,8 @@ Z	vyz
 撮	zkrf
 哲人	zkrj
 找人	zkrj
-招认	zkrl
 指认	zkrl
+招认	zkrl
 撞入	zkrm
 择日	zkrr
 晢	zkrr
@@ -152350,10 +152296,10 @@ Z	vyz
 挣	zkwb
 扺	zkwc
 鸷	zkwd
-征文	zkwh
-执委会	zkwh
 指望	zkwh
 撰文	zkwh
+征文	zkwh
+执委会	zkwh
 执	zkwk
 指为	zkwm
 专科文凭	zkwp
@@ -152387,8 +152333,8 @@ Z	vyz
 征友	zkya
 择友	zkya
 挚友	zkya
-招引	zkyb
 指引	zkyb
+招引	zkyb
 众口一词	zkyc
 只可意会，不可言传	zkyc
 择一	zkyd
@@ -152456,17 +152402,15 @@ Z	vyz
 之本	zlbf
 之邦	zlbg
 之变	zlbh
-珠联璧合	zlbh
 之别	zlbi
+珠联璧合	zlbh
 之便	zlbj
-战略布局	zlbj
 之八	zlbm
 之宝	zlbn
 之败	zlbo
 支楞八翘	zlbq
 诸般	zlbq
 之比	zlbs
-战略部署	zlbs
 之笔	zlbt
 支楞八翘	zlbu
 争论不休	zlbx
@@ -152475,14 +152419,14 @@ Z	vyz
 之才	zlcf
 之春	zlcg
 祖传	zlcj
-之初	zlcl
-祝词	zlcl
 证词	zlcl
+祝词	zlcl
+之初	zlcl
 之差	zlcm
 诊察	zlcn
 治理措施	zlcs
-之称	zlct
 祝辞	zlct
+之称	zlct
 之城	zlcu
 诛除	zlcv
 之处	zlcw
@@ -152502,7 +152446,6 @@ Z	vyz
 之敌	zldt
 之地	zldu
 诸多	zldw
-战略地位	zldw
 诊断学	zldx
 中流砥柱	zldz
 之恶	zlef
@@ -152526,9 +152469,7 @@ Z	vyz
 祖坟	zlfu
 之风	zlfw
 重力分选	zlfx
-战略防御	zlfy
 祝福语	zlfy
-战略方针	zlfz
 之感	zlga
 诸葛	zlge
 之功	zlgf
@@ -152542,9 +152483,7 @@ Z	vyz
 祖国	zlgo
 自力更生	zlgs
 之隔	zlgv
-战略构想	zlgx
 谪	zlh
-战略伙伴	zlhb
 之海	zlhd
 之花	zlhe
 谪	zlhf
@@ -152564,7 +152503,6 @@ Z	vyz
 之和	zlht
 谆	zlhv
 祝	zli
-智力支持	zlic
 之治	zlid
 治理整顿	zlid
 诊治	zlid
@@ -152573,9 +152511,7 @@ Z	vyz
 之责	zlig
 之主	zlih
 证章	zlih
-自律组织	zlii
 诅咒	zlii
-专栏作家	zlij
 之众	zlij
 之作	zlij
 自乱阵脚	zlij
@@ -152596,7 +152532,6 @@ Z	vyz
 之最	zlir
 证照	zlir
 之至	zlis
-战略战术	zlis
 褶皱山	zlis
 之重	zlit
 之长	zlit
@@ -152618,7 +152553,6 @@ Z	vyz
 谪居	zljb
 之机词	zljc
 之极	zljc
-战略决策	zljc
 祝酒辞	zljc
 祝酒	zljd
 肇基	zljf
@@ -152668,7 +152602,6 @@ Z	vyz
 之力	zllz
 禚	zlm
 之面	zlma
-战略目标	zlmb
 之梦	zlmc
 指路明灯	zlmd
 诛灭	zlmd
@@ -152801,9 +152734,7 @@ Z	vyz
 指鹿为马	zlwm
 谵	zlwm
 证悟	zlwn
-战略武器	zlwq
 证物	zlwt
-战略武器	zlwu
 之外	zlww
 之我见	zlwx
 杂乱无章	zlwz
@@ -152832,14 +152763,12 @@ Z	vyz
 诈降	zlxv
 之象	zlxw
 之乡	zlxx
-战略协作	zlxz
 直立行走	zlxz
 祉	zly
 祝愿	zlya
 之异	zlyb
 之一	zlyd
 之源	zlyd
-战略要地	zlyd
 祉	zlyd
 之药	zlye
 之于	zlyg
@@ -152861,14 +152790,12 @@ Z	vyz
 钟灵毓秀	zlyx
 之虞	zlyy
 诏	zlz
-智力支持	zlzc
 治理整顿	zlzd
 诊治	zlzd
 之职	zlzf
 之责	zlzg
 之主	zlzh
 诅咒	zlzi
-专栏作家	zlzj
 之众	zlzj
 之作	zlzj
 自乱阵脚	zlzj
@@ -152883,7 +152810,6 @@ Z	vyz
 转来转去	zlzq
 之最	zlzr
 之至	zlzs
-战略战术	zlzs
 褶皱山	zlzs
 之长	zlzt
 之志	zlzu
@@ -152895,7 +152821,6 @@ Z	vyz
 之战	zlzy
 装聋作哑	zlzy
 逐鹿中原	zlzy
-自律组织	zlzz
 着	zm
 总	zm
 糟	zm
@@ -154395,7 +154320,6 @@ Z	vyz
 自来水	zrls
 自利	zrlt
 自留	zrlw
-自律性	zrlx
 自力	zrlz
 照	zrm
 照面	zrma
@@ -156972,7 +156896,6 @@ Z	vyz
 占领区	zylq
 择优录取	zylq
 镇流器	zylq
-战略上	zyls
 正言厉色	zyls
 正颜厉色	zyls
 战乱	zylt
@@ -156980,7 +156903,6 @@ Z	vyz
 择优录取	zylu
 镇流器	zylu
 占了	zylv
-战略性	zylx
 择优录用	zyly
 战力	zylz
 龇牙咧嘴	zylz
